--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@ function get_result(is_copy){
 		if(p){
 			 document.getElementById('mybody').removeChild(p);
 		}
-		 your_codes.getValue();
+
 		
 		var result  = true;
 		if(result){
-			your_result.setValue (your_codes);
+			your_result.setValue (your_codes.getValue());
 			if(is_copy){
 				try{
 					var x = document.getElementById('ss');
